--- a/package.json
+++ b/package.json
@@ -2,16 +2,11 @@
   "name": "notable",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "redux-logger": "^3.0.6"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
@@ -21,7 +16,12 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-dev": "webpack -d --mode development",
+    "build-prod": "webpack -p --mode production",
+    "start": "webpack-dev-server --hot --mode development",
+    "postinstall": "webpack",
+    "w": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,9 @@
   },
   "homepage": "https://github.com/Rmin-A/Notable2#readme",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
@@ -41,6 +44,11 @@
     "css-loader": "^2.1.0",
     "eslint": "^5.13.0",
     "eslint-loader": "^2.1.2",
-    "style-loader": "^0.23.1"
+    "file-loader": "^3.0.1",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14"
   }
 }
