--- a/package.json
+++ b/package.json
@@ -34,9 +34,19 @@
   "bugs": {
     "url": "https://github.com/Rmin-A/Notable2/issues"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
+  },
   "homepage": "https://github.com/Rmin-A/Notable2#readme",
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
