--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
@@ -57,6 +57,7 @@
     "eslint": "^5.13.0",
     "eslint-loader": "^2.1.2",
     "file-loader": "^3.0.1",
+    "redux-logger": "^3.0.6",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.3",
