--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
-    "eslint": "^5.13.0",
+    "eslint": "^5.14.0",
+    "eslint-config-google": "^0.12.0",
     "eslint-loader": "^2.1.2",
     "file-loader": "^3.0.1",
     "redux-logger": "^3.0.6",
