--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-quill": "^1.3.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "redux-logger": "^3.0.6",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
@@ -58,8 +59,11 @@
     "eslint-config-google": "^0.12.0",
     "eslint-loader": "^2.1.2",
     "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.3.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
