--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       "@babel/preset-react"
     ],
     "plugins": [
-      "@babel/plugin-proposal-class-properties"
+      "transform-class-properties"
     ]
   },
   "homepage": "https://github.com/Rmin-A/Notable2#readme",
@@ -52,6 +52,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
