--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "notable",
   "private": true,
   "dependencies": {
+    "html-to-text": "^4.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-quill": "^1.3.3",
