--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "dependencies": {
     "html-to-text": "^4.0.0",
-    "react": "^16.8.1",
+    "react": "^16.8.3",
     "react-dom": "^16.8.1",
     "react-quill": "^1.3.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "table": "^5.2.3"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
