--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "lib": "lib",
     "test": "test"
   },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "6.8.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-dev": "webpack -d --mode development",
